Ran spelling checker on translation.

--- a/man/po/sv.po
+++ b/man/po/sv.po
@@ -1,17 +1,16 @@
 # Manual page for dpkg
 # By Peter Karlsson <peterk@debian.org>, 1999-2007.
 # Copyright 1999-2007 Software in the Public Interest
-# 
 msgid ""
 msgstr ""
 "Project-Id-Version: dpkg man pages\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2007-07-21 16:13+0300\n"
-"PO-Revision-Date: 2007-08-05 21:22+0100\n"
+"PO-Revision-Date: 2007-08-05 21:52+0100\n"
 "Last-Translator: Peter Karlsson <peterk@debian.org>\n"
 "Language-Team: Swedish <debian-l10n-swedish@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=iso-8859-1\n"
+"Content-Type: text/plain; charset=ISO-8859-1\n"
 "Content-Transfer-Encoding: 8bit\n"
 
 # type: Plain text
@@ -278,7 +277,7 @@ msgstr ""
 "B<cleanup-info> är ett Perlskript som försöker städa upp den oreda en "
 "felaktig B<install-info>(8) kan ha skapat. Den samlar alla sektioner med "
 "samma rubrik till en och samma. Den försöker vara smart vad gäller stora och "
-"små bokstäver och avslutandee kolontecken/blanksteg."
+"små bokstäver och avslutande kolontecken/blanksteg."
 
 # type: Plain text
 #: ../../man/cleanup-info.8:21
@@ -749,7 +748,7 @@ msgid ""
 "Common priorities are `required', `standard', `optional', `extra' etc."
 msgstr ""
 "Ställer in hur viktigt paketet är jämfört med systemet som enhet.  Vanliga "
-"prioriteter är \"required\" (krävd), \"standard\" (normal), \"optional"
+"prioriteter är \"required\" (nödvändig), \"standard\" (normal), \"optional"
 "\" (valfritt), \"extra\" (extra) osv."
 
 # type: Plain text
@@ -760,7 +759,7 @@ msgid ""
 "packages are layed out in the archive.  A list of these values can be "
 "obtained from the latest version of the B<debian-policy> package."
 msgstr ""
-"I Debian har fälten B<Section> och B<Priority> en finierad uppsättning "
+"I Debian har fälten B<Section> och B<Priority> en definierad uppsättning "
 "accepterade värden baserade på policymanualen. Dessa används för att "
 "bestämma hur paketen placeras i arkivet. En lista över dessa värden finns i "
 "den senaste versionen av paketet B<debian-policy>."
@@ -873,7 +872,7 @@ msgid ""
 "install a package without those listed in its B<Recommends> field."
 msgstr ""
 "Lista över paket som bör installeras tillsammans med paketet i de allra "
-"flesta fall.  Pakethanteringsprogramvaran kommer att varna användaren om hen "
+"flesta fall.  Pakethanteringsprogramvaran kommer att varna användaren om man "
 "installerar ett paket utan de som listas i B<Recommends>-fältet."
 
 # type: TP
@@ -1197,11 +1196,7 @@ msgstr ""
 "en del fyllas i av distributionstsarerna snarare än paketansvariga, eftersom "
 "de handlar om hur filer arrangeras för utgivningen snarare än faktiska "
 "beroenden och beskrivningen av paketet. Denna informationen finns i filen "
-"\"override\".While most information about a package can be found in the "
-"control file, some must be filled in by the distribution czars rather than "
-"by the maintainer, because they relate to the arrangement of files for "
-"release rather than the actual dependencies and description of the package.  "
-"This information is found in the override file."
+"\"override\"."
 
 # type: Plain text
 #: ../../man/deb-override.5:33
@@ -1367,7 +1362,7 @@ msgid ""
 msgstr ""
 "Variabler kan sättas genom att använda kommandoradsflaggan B<-V>. De kan "
 "även anges i filen B<debian/substvars> (eller vilken som helst annan fil som "
-"anges med flaggan B<-T>). FIlen består av rader på formen "
+"anges med flaggan B<-T>). Filen består av rader på formen "
 "I<namn>B<=>I<värde>. Avslutande blanksteg på en rad, blanka rader och rader "
 "som börjar med en B<#>-symbol (kommentarer) ignoreras."
 
@@ -1499,7 +1494,7 @@ msgid ""
 msgstr ""
 "Värdet på utdatafältet I<fältnamn> (som måste anges med rätt form av stora "
 "och små bokstäver). Om du sätter dessa variabler händer ingenting förutom "
-"där de explicit expanderas."
+"där de explicit expanderats."
 
 # type: TP
 #: ../../man/deb-substvars.5:93
@@ -1563,7 +1558,7 @@ msgstr "B<dpkg:Version>"
 # type: Plain text
 #: ../../man/deb-substvars.5:116
 msgid "The full version of dpkg."
-msgstr "Fullständing version av dpkg."
+msgstr "Fullständig version av dpkg."
 
 # type: Plain text
 #: ../../man/deb-substvars.5:119
@@ -2837,7 +2832,7 @@ msgid ""
 "(Defaults to I</var/lib/dpkg>)"
 msgstr ""
 "Ändra förvald administrationskatalog, vilken innehåller flera filer som "
-"beskriver status för installerade eller avinstallerade pakete, osv. "
+"beskriver status för installerade eller avinstallerade paket, osv. "
 "(standardvärde är I</var/lib/dpkg>)"
 
 # type: TP
@@ -3348,7 +3343,7 @@ msgstr ""
 "Du kan ange värdarkitektur genom att ange en av, eller båda, flaggorna B<-a> "
 "och B<-t>. Förvalet bestäms av ett externt anrop till B<gcc>(1), eller är "
 "detsamma som byggarkitekturen varken \\s-1CC\\s0 eller gcc är tillgängliga. "
-"Det räcket att ange en av B<-a> och B<-t>, värdet på den andra kommer "
+"Det räcker att ange en av B<-a> och B<-t>, värdet på den andra kommer "
 "ställas in till ett fungerande förval. Det är faktiskt oftast bättre att "
 "bara ange den ena eftersom B<dpkg-architecture> kommer varna dig om ditt val "
 "inte överensstämmer med förvalet."
@@ -4433,7 +4428,7 @@ msgid ""
 msgstr ""
 "När B<dpkg-buildpackages> behöver exekvera delar av byggprocessen som root "
 "sätter den kommandot som skall exekveras efter I<få-root-kommando> om ett "
-"sådant har angivitis. I<få-root-kommando> måste vara namnet på ett program i "
+"sådant har angivits. I<få-root-kommando> måste vara namnet på ett program i "
 "B<PATH> och namnet på det faktiska kommando som skall anropas och dess "
 "argument sänds som argument. I<få-root-kommando> får inte innehålla "
 "blanksteg eller andra skalmetatecken. I<få-root-kommando> kan typiskt vara "
@@ -4583,7 +4578,7 @@ msgid ""
 "dependencies and build conflicts listed in the control file. If any are not "
 "met, it displays them and exits with a nonzero return code."
 msgstr ""
-"Detta prorgram kontrollerar installerade paket på systemet mot byggberoenden "
+"Detta program kontrollerar installerade paket på systemet mot byggberoenden "
 "och -konflikter som listas i filen control. Om de inte uppfylls, visas de "
 "och programmet avslutas med en felstatus som inte är noll."
 
@@ -4819,7 +4814,7 @@ msgstr "B<-I>, B<--info> I<arkiv> [I<control-filnamn> ...]"
 # type: Plain text
 #: ../../man/dpkg-deb.1:81
 msgid "Provides information about a binary package archive."
-msgstr "Tillhandahåller information om ett binärt parketarkiv."
+msgstr "Tillhandahåller information om ett binärt paketarkiv."
 
 # type: Plain text
 #: ../../man/dpkg-deb.1:86
@@ -6027,7 +6022,7 @@ msgid ""
 "architecture information."
 msgstr ""
 "Alla filer med ändelsen \"deb\" i katalogen /root/debian och dess "
-"underkataloger kommer att få sina namn ersatta mede dpkg-name, om så behövs, "
+"underkataloger kommer att få sina namn ersatta med dpkg-name, om så behövs, "
 "till namn utan arkitekturinformation."
 
 # type: TP
@@ -6300,7 +6295,7 @@ msgstr "B<-f>, B<--showformat=>I<format>"
 # type: Plain text
 #: ../../man/dpkg-query.1:81
 msgid "In the format string, \\(lqB<\\e>\\(rq introduces escapes:"
-msgstr "I formatsträgnen inleds följande styrsekvenser med \\(lqB<\\e>\\(rq:"
+msgstr "I formatsträngen inleds följande styrsekvenser med \\(lqB<\\e>\\(rq:"
 
 # type: Plain text
 #: ../../man/dpkg-query.1:87
@@ -6311,7 +6306,7 @@ msgid ""
 "    B<\\et>  tab\n"
 msgstr ""
 "    B<\\en>  radmatning\n"
-"    B<\\er>  vagnreteur\n"
+"    B<\\er>  vagnretur\n"
 "    B<\\et>  tabulator\n"
 
 # type: Plain text
@@ -6540,7 +6535,7 @@ msgid ""
 "architecture only the first one found is used."
 msgstr ""
 "Om mer än en version av ett paket upptäcks kommer endast den senaste att tas "
-"mede i utdata. Om de har samma version och bara skiljer i arkitektur kommer "
+"med i utdata. Om de har samma version och bara skiljer i arkitektur kommer "
 "bara den första som hittas att användas."
 
 # type: TP
@@ -6595,7 +6590,7 @@ msgid ""
 "file, or have maintainer substitutions which do not take effect."
 msgstr ""
 "B<dpkg-scanpackages> skriver ut de vanliga självförklarande felen. Det "
-"varnar även om paket ligger i fel katalog har dubletter, har ett Filename-"
+"varnar även om paket ligger i fel katalog har dubbletter, har ett Filename-"
 "fält i sin control-fil, saknas från överstyrningsfilen, eller har "
 "substitueringar utan effekt skrivna av paketansvariga."
 
@@ -6786,7 +6781,7 @@ msgstr ""
 "Alla andra variabler som börjar på I<shlibs:> tas bort ur filen. B<dpkg-"
 "shlibdeps> läser information om beroenden för delade bibliotek från B<debian/"
 "shlibs.local>, B</etc/dpkg/shlibs.override>, B<shlibs>-området i control-"
-"filen för paketet som innehåller filn som B<objdump> rapporterar att det "
+"filen för paketet som innehåller filen som B<objdump> rapporterar att det "
 "uppfyller biblioteksberoendet, eller B</etc/dpkg/shlibs.default>. Den första "
 "träffen används."
 
@@ -7045,7 +7040,7 @@ msgstr ""
 "Filerna i det extraherade paketet kommer att ha behörighet och ägare satta "
 "till det som kunde förväntas om filerna och katalogerna bara hade skapats - "
 "kataloger och körbara filer kommer ha 0777 och enkla filer 0666, båda "
-"modifierade av uppackaerns umask; om föräldrakatalogen är setgid kommer de "
+"modifierade av uppackarens umask; om föräldrakatalogen är setgid kommer de "
 "extraherade katalogerna också att vara det, och samtliga filer och kataloger "
 "kommer ärva dess gruppägarskap."
 
@@ -7069,7 +7064,7 @@ msgid ""
 msgstr ""
 "Bygg ett källkodspaket. Ett eller två argument som inte är flaggor skall "
 "anges. Det första är namnet på katalogen som innehåller det uppackade "
-"källkodsträdete. Om ett andra argument anges skall det vara namnet på den "
+"källkodsträdet. Om ett andra argument anges skall det vara namnet på den "
 "ursprungliga källkodskatalogen eller tarfilen eller den tomma strängen om "
 "paketet är Debianspecifikt och därför inte har någon Debianiserings-diff. Om "
 "inget andra argument anges letar B<dpkg-source> efter originalkällkods-"
@@ -7120,7 +7115,7 @@ msgstr ""
 "Du kan ange ett reguljärt uttryck i perlformat för att matcha filer som du "
 "vill skall filtreras ut ur listan över filer för diffen. (Listan skapas av "
 "ett find-kommando.) B<-i> ensamt aktiverar funktionen, med ett standardvärde "
-"som filtrerar ut styrfilere och kataloger från de flesta vanliga "
+"som filtrerar ut styrfiler och kataloger från de flesta vanliga "
 "versionshanteringssystem, säkerhetskopior, växlingsfiler och Libtool-"
 "byggutdatakataloger."
 
@@ -7264,7 +7259,7 @@ msgid ""
 msgstr ""
 "Anger att originalkällkoden finns både som en katalog och en tarfil. "
 "Katalogen kommer att användas för att skapa diffen, men tarfilen för att "
-"skapa B<.dsc>-filen. Flaggan måste använas med tillförsikt - om katalogen "
+"skapa B<.dsc>-filen. Flaggan måste användas med tillförsikt - om katalogen "
 "och tarfilen inte stämmer överens kommer ett trasigt källkodsarkiv att "
 "skapas."
 
@@ -7345,7 +7340,7 @@ msgstr ""
 # type: Plain text
 #: ../../man/dpkg-source.1:225
 msgid "Unpacks the original source tree."
-msgstr "Packar upp originalkällkodsträdete."
+msgstr "Packar upp originalkällkodsträdet."
 
 # type: Plain text
 #: ../../man/dpkg-source.1:230
@@ -8387,7 +8382,7 @@ msgstr "Access (Åtkomst)"
 #: ../../man/dselect.1:139
 msgid "Choose and configure an access method to access package repositories."
 msgstr ""
-"Väljer och konfigurar en \"åtkomstmetod\" för att komma åt paketsamlingen."
+"Väljer och konfigurerar en \"åtkomstmetod\" för att komma åt paketsamlingen."
 
 # type: Plain text
 #: ../../man/dselect.1:145
@@ -8483,8 +8478,8 @@ msgstr ""
 "möjlighet att lösa beroendet. På denna skärm visas en lista över motstridiga "
 "eller beroende paket, och för varje paket som listas visas dess orsak. "
 "Användaren kan applicera de av B<dselect> rekommenderade ändringarna, själv "
-"ändra dem, eller backa alla ändringar, inklusive de som gjorde att de "
-"ohanterade beroendena eller konflikterna uppstod till att börja med."
+"ändra dem, eller backa alla ändringar, inklusive de som gjorde att de ej "
+"hanterade beroendena eller konflikterna uppstod till att börja med."
 
 # type: Plain text
 #: ../../man/dselect.1:179
@@ -9267,7 +9262,7 @@ msgstr ""
 "tas bort. Om B<--remove-exactly> anges måste I<filnamn> vara det exakta "
 "namnet på den post som skall tas bort (dvs. \"emacs-20/emacs\" eller \"gcc"
 "\"), annars används basnamnet för filnamnet till att referera till "
-"manyposten som skapas, såvida inte det finns ett överstyrande START-INFO-DIR-"
+"menyposten som skapas, såvida inte det finns ett överstyrande START-INFO-DIR-"
 "post i den givna filen. Filen måste därför finnas (eller vara på väg att "
 "installeras, eller ha existerat tidigare, om en post tas bort) i samma "
 "katalog som B<dir>-filen (se flaggan B<--infodir>)."
@@ -9498,7 +9493,7 @@ msgid ""
 "more. The default is 27."
 msgstr ""
 "Anger att den första raden i beskrivningen skall få ett indrag på I<nnn> "
-"tecken. Nya blanksteg läggs till om så behövs. Om dete behövs på grund av "
+"tecken. Nya blanksteg läggs till om så behövs. Om det behövs på grund av "
 "längden på detaljer i B<dir>-menyposten kan den få ett större indrag. "
 "Standardvärde är 27."
 
@@ -9600,8 +9595,8 @@ msgid ""
 "options are ignored."
 msgstr ""
 "Om posten som finns i själva Info-filen spänner över flera rader, där varje "
-"rad anger en menypost, kommer texten i filen att användas ordagrannt. I "
-"detta fall stängs bokstavssorteringen av, och posterna läggs in överst i den "
+"rad anger en menypost, kommer texten i filen att användas ordagrant. I detta "
+"fall stängs bokstavssorteringen av, och posterna läggs in överst i den "
 "önskade sektionen. I detta fall ignoreras flaggorna B<--menuentry>, B<--"
 "maxwidth>, B<--align>, B<--calign> och B<--menuentry> "
 
@@ -9684,7 +9679,7 @@ msgid ""
 "the old entry will be left alone instead of being replaced; the default is "
 "to overwrite any old entry found with the newly generated one."
 msgstr ""
-"Om filen som installeras redan har en post i Info-B<dir>-filen kommer dene "
+"Om filen som installeras redan har en post i Info-B<dir>-filen kommer den "
 "gamla posten att lämnas kvar istället för att ersättas. Standard är att "
 "skriva över en gammal post med den nya som skapas."
 
@@ -9791,7 +9786,7 @@ msgstr ""
 "daemon> ingenting och avslutar med status 1 (0 om B<--oknodo> anges). Om en "
 "sådan process inte existerar startas en instans, antingen med programfilen "
 "som anges med B<--exec>, (eller, om den anges, med B<--startas>). Eventuella "
-"argument som ges efter B<--> på kommandoraden skickas omodiferade till "
+"argument som ges efter B<--> på kommandoraden skickas utan ändring till "
 "programmet som startas."
 
 # type: TP
@@ -10861,7 +10856,7 @@ msgid ""
 "link group B<vi>, which includes links for the program itself and the "
 "associated manpage."
 msgstr ""
-"Det är flera paket som tillhandahåler en textredigerare kompatibel med "
+"Det är flera paket som tillhandahåller en textredigerare kompatibel med "
 "B<vi>, till exempel B<nvi> och B<vim>. Vilken bestäms via länkgruppen B<vi>, "
 "vilken innehåller länkar både för själva programmet och dessa anknutna "
 "manualsida."
