--- a/debian/changelog
+++ b/debian/changelog
@@ -25,6 +25,7 @@ dpkg (1.14.6) UNRELEASED; urgency=low
   * Dzongkha (Tshewang Norbu). Closes: #430931
   * Swedish (Peter Karlsson).
   * Nepali (Shiva Prasad Pokharel). Closes: #435353
+  * Russian (Yuri Kozlov). Closes: #436147
 
   [ Updated dselect translations ]
   * Swedish (Peter Karlsson).
