--- a/debian/changelog
+++ b/debian/changelog
@@ -29,6 +29,7 @@ dpkg (1.14.6) UNRELEASED; urgency=low
 
   [ Updated dselect translations ]
   * Swedish (Peter Karlsson).
+  * Russian (Yuri Kozlov). Closes: #436149
 
   [ Updated man pages translations ]
   * German (Helge Kreutzmann).
