--- a/dselect/po/ru.po
+++ b/dselect/po/ru.po
@@ -1,21 +1,21 @@
-# translation of dselect-ru.po to Russian
+# translation of ru.po to Russian
 # Localization file for dpkg and other programs from dpkg package.
 # Copyright (C) 1999 Michael Sobolev
 #
 # Michael Sobolev <mss@transas.com>, 1999.
-# Yuri Kozlov <kozlov.y@gmail.com>, 2004, 2005, 2006.
+# Yuri Kozlov <kozlov.y@gmail.com>, 2004, 2005, 2006, 2007.
 msgid ""
 msgstr ""
 "Project-Id-Version: dpkg_po_ru\n"
 "Report-Msgid-Bugs-To: debian-dpkg@lists.debian.org\n"
 "POT-Creation-Date: 2007-05-08 04:15+0300\n"
-"PO-Revision-Date: 2006-10-07 18:03+0400\n"
+"PO-Revision-Date: 2007-08-05 23:02+0400\n"
 "Last-Translator: Yuri Kozlov <kozlov.y@gmail.com>\n"
 "Language-Team: Russian <debian-l10n-russian@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: KBabel 1.11.2\n"
+"X-Generator: KBabel 1.11.4\n"
 "Plural-Forms:  nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n%"
 "10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
 
@@ -144,9 +144,8 @@ msgstr ""
 "\n"
 
 #: dselect/baselist.cc:259
-#, fuzzy
 msgid "Keybindings"
-msgstr "горячие клавиши"
+msgstr "Горячие клавиши"
 
 #: dselect/baselist.cc:307
 #, c-format
@@ -305,7 +304,6 @@ msgid "Keystrokes"
 msgstr "Горячие клавиши"
 
 #: dselect/helpmsgs.cc:25
-#, fuzzy
 msgid ""
 "Motion keys: Next/Previous, Top/End, Up/Down, Backwards/Forwards:\n"
 "  j, Down-arrow         k, Up-arrow             move highlight\n"
@@ -337,7 +335,7 @@ msgid ""
 "   D     set all to Directly requested state  n, \\  repeat last search\n"
 msgstr ""
 "Клавиши перемещения: След/Пред, Нач/Кон, Верх/Низ, Назад/Вперёд:\n"
-"  стрелка вниз, j      стрелка вверх, k     перемещение выделения\n"
+"  j, стрелка вниз,      k, стрелка вверх,     перемещение выделения\n"
 "  N, PageDown, пробел     P, PageUp, Backspace    прокрутка списка на "
 "страницу\n"
 "  ^n                      ^p                      прокрутка списка на "
@@ -352,6 +350,7 @@ msgstr ""
 "                                                   на 1/3 экрана\n"
 "  ^b                      ^f                      прокрутка в сторону\n"
 "                                                   на 1 колонку\n"
+"\n"
 "Пометка пакетов для дальнейшей обработки:\n"
 " +, Insert  установить или обновить  =, H  зафиксировать в текущем "
 "состоянии\n"
@@ -361,16 +360,15 @@ msgstr ""
 "                                             Различные:\n"
 "Выход, перезапись (капитализация важна!):     ?, F1 вызов справки (также "
 "Help)\n"
-"  Ввод  Подтвердить и выйти, проверив         i, I  переключение экранов\n"
-"        зависимости                                 информации\n"
-"   Q    Подтвердить и выйти, не проверяя      o, O  переключение порядка\n"
-"        зависимости                                 сортировки\n"
-" X, Esc Выйти, отменив все изменения          v, V  изменить экран "
+"  Ввод  Подтвердить, выйти (проверка зависимостей) i, I  переключение "
+"экранов\n"
+"   Q    Подтвердить, выйти (не проверяя)      o, O  переключение порядка\n"
+" X, Esc Выйти, отменить все изменения         v, V  изменить экран "
 "состояния\n"
 "   R    Вернуться к предыдущему состоянию      ^l   перерисовать экран\n"
 "   U    Установить предложенное программой      /   поиск (ввод для отмены)\n"
 "        состояние для всех пакетов\n"
-"   D    Установить непосредственно              \\   повторить последний "
+"   D    Установить непосредственно            n, \\   повторить последний "
 "поиск\n"
 "        затребованное состояние для всех пакетов\n"
 
@@ -710,7 +708,6 @@ msgid "Keystrokes for method selection"
 msgstr "Горячие клавиши при выборе метода доступа"
 
 #: dselect/helpmsgs.cc:191
-#, fuzzy
 msgid ""
 "Motion keys: Next/Previous, Top/End, Up/Down, Backwards/Forwards:\n"
 "  j, Down-arrow         k, Up-arrow             move highlight\n"
@@ -735,7 +732,7 @@ msgid ""
 "  \\                repeat last search\n"
 msgstr ""
 "Клавиши перемещения: След/Пред, Нач/Кон, Верх/Низ, Назад/Вперёд:\n"
-"  n, стрелка вниз, j      p, стрелка вверх, k     перемещение выделения\n"
+"  j, стрелка вниз       k, стрелка вверх     перемещение выделения\n"
 "  N, PageDown, пробел     P, PageUp, Backspace    прокрутка списка на "
 "страницу\n"
 "  ^n                      ^p                      прокрутка списка на "
@@ -750,14 +747,14 @@ msgstr ""
 "                                                   на 1/3 экрана\n"
 "  ^b                      ^f                      прокрутка в сторону\n"
 "                                                   на 1 колонку\n"
-"(Это те же клавиши перемещения, что и в списке пакетов)\n"
+"(Это те же клавиши перемещения, что и в списке пакетов.)\n"
 "\n"
-"Выход:ъ\n"
-"  Ввод             выбрать выделенный метод и перейти к диалогу его "
+"Выход:\n"
+"  Return, Enter    выбрать выделенный метод и перейти к диалогу его "
 "настройки\n"
 "  x, X             выйти, не изменяя используемый метод установки\n"
 "\n"
-"Различные:\n"
+"Различное:\n"
 "  ?, Help, F1      вызов справки\n"
 " ^l                перерисовать экран\n"
 "  /                поиск (ввод для отмены)\n"
@@ -1067,9 +1064,8 @@ msgid "[none]"
 msgstr "[нет]"
 
 #: dselect/methlist.cc:191
-#, fuzzy
 msgid "Explanation"
-msgstr "описание метода "
+msgstr "Описание метода"
 
 #: dselect/methlist.cc:200
 msgid "No explanation available."
@@ -1092,7 +1088,7 @@ msgid ""
 "Press <enter> to continue."
 msgstr ""
 "\n"
-"Чтобы продолжить, нажмите ввод."
+"Чтобы продолжить, нажмите <ввод>."
 
 #: dselect/method.cc:144
 #, c-format
@@ -1410,7 +1406,7 @@ msgstr "требует предварительной установки"
 
 #: dselect/pkgdisplay.cc:75
 msgid "breaks with"
-msgstr ""
+msgstr "ломает"
 
 #: dselect/pkgdisplay.cc:76
 msgid "conflicts with"
@@ -1625,24 +1621,20 @@ msgstr ""
 "позволит отмечать пакеты, пользуясь широким набором критериев."
 
 #: dselect/pkginfo.cc:95
-#, fuzzy
 msgid "Interrelationships"
-msgstr "зависимости "
+msgstr "зависимости"
 
 #: dselect/pkginfo.cc:112
-#, fuzzy
 msgid "No description available."
-msgstr "описание отсутствует."
+msgstr "Описание отсутствует."
 
 #: dselect/pkginfo.cc:130
-#, fuzzy
 msgid "Installed control file information"
-msgstr "информация об установленной версии пакета "
+msgstr "Установлена информация из файла control"
 
 #: dselect/pkginfo.cc:146
-#, fuzzy
 msgid "Available control file information"
-msgstr "информация о доступной версии"
+msgstr "Доступна информация из файла control"
 
 #: dselect/pkglist.cc:123 dselect/pkglist.cc:124
 msgid "<null>"
@@ -1741,18 +1733,3 @@ msgstr "Уст.верс."
 #: dselect/pkgtop.cc:295
 msgid "Avail.ver"
 msgstr "Дост.верс."
-
-#~ msgid "interrelationships affecting "
-#~ msgstr "зависимости с участием "
-
-#~ msgid "description of "
-#~ msgstr "описание пакета "
-
-#~ msgid "description"
-#~ msgstr "описание"
-
-#~ msgid "currently installed control info"
-#~ msgstr "информация об установленной версии"
-
-#~ msgid "available version of control info for "
-#~ msgstr "информация о доступной версии пакета "
