Fix pattern matching in dpkg-query -l and -W.
Do not segfault when the result from a 'dpkg-query -l' is bigger than
the total number of current packages, and do not produce repeated
results with overlapping patterns on 'dpkg-query -W'.

--- a/debian/changelog
+++ b/debian/changelog
@@ -22,6 +22,9 @@ dpkg (1.14.6) UNRELEASED; urgency=low
   * Run the deconfiguration of each package to be deconfigured once, instead
     of once per each conflicting package being removed. Closes: #378003
     Thanks to Ian Jackson.
+  * Do not segfault when the result from a 'dpkg-query -l' is bigger than
+    the total number of current packages, and do not produce repeated
+    results with overlapping patterns on 'dpkg-query -W'. Closes: #428427
 
   [ Updated scripts translations ]
   * French (Frédéric Bothamy, Christian Perrier).
