Do not print empty lines after 'Setting up ...' output.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2007-08-08  Guillem Jover  <guillem@debian.org>
 
+	* src/configure.c (deferred_configure): Do not print a new line
+	if maintainer_script_installed returned true.
+
+2007-08-08  Guillem Jover  <guillem@debian.org>
+
 	* dpkg-deb/build.c (do_build): Use NULL instead of '(char *)0'.
 	* dpkg-deb/extract.c (movecontrolfiles, extracthalf): Likewise.
 	* dpkg-deb/info.c (cu_info_prepare, info_prepare): Likewise.
