--- a/debian/changelog
+++ b/debian/changelog
@@ -27,6 +27,7 @@ dpkg (1.14.6) UNRELEASED; urgency=low
     results with overlapping patterns on 'dpkg-query -W'. Closes: #428427
   * Tightening dpkg-dev versioned Depends to dpkg 1.14.6, and dpkg Conflicts
     against << dpkg-dev 1.14.6, where the perl modularization started.
+  * Do not print empty lines after 'Setting up ...' output. Closes: #392317
 
   [ Updated scripts translations ]
   * French (Frédéric Bothamy, Christian Perrier).
