--- a/debian/changelog
+++ b/debian/changelog
@@ -28,6 +28,9 @@ dpkg (1.14.6) UNRELEASED; urgency=low
   * Tightening dpkg-dev versioned Depends to dpkg 1.14.6, and dpkg Conflicts
     against << dpkg-dev 1.14.6, where the perl modularization started.
   * Do not print empty lines after 'Setting up ...' output. Closes: #392317
+  * When a slave alternative is inapplicable do not attempt to create the
+    slave link before removing it again. Closes: #411699
+    Thanks to Ian Jackson.
 
   [ Updated scripts translations ]
   * French (Frédéric Bothamy, Christian Perrier).
