Do not treat two symlinks to the same directory as a file conflict.
If the package contains a symlink to a directory where the existing
symlink on-disk points to the same place, do not consider it a file
conflict.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2007-08-11  Ian Jackson  <iwj@ubuntu.com>
+
+	* src/archives.c (linktosameexistingdir): New function.
+	(tarobject): Call linktosameexistingdir if the tarball and the on-disk
+	files are symlinks and ignore the symlink if it returns true.
+
 2007-08-08  Ian Jackson  <iwj@ubuntu.com>
 
 	* scripts/update-alternatives.pl: In the case where the slave is
