--- a/debian/changelog
+++ b/debian/changelog
@@ -31,6 +31,10 @@ dpkg (1.14.6) UNRELEASED; urgency=low
   * When a slave alternative is inapplicable do not attempt to create the
     slave link before removing it again. Closes: #411699
     Thanks to Ian Jackson.
+  * Do not consider it a file conflict if the package contains a symlink
+    to a directory where the existing symlink on-disk points to the
+    same place. Closes: #377682
+    Thanks to Ian Jackson.
 
   [ Updated scripts translations ]
   * French (Frédéric Bothamy, Christian Perrier).
