--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2008-12-01  Ian Jackson  <iwj@ubuntu.com>
+
+	* src/archives.c (linktosameexistingdir): New function.
+	(tarobject): Call linktosameexistingdir if the tarball and the on-disk
+	files are symlinks and ignore the symlink if it returns true.
+
 2008-12-01  Guillem Jover  <guillem@debian.org>
 
 	* configure.ac: Bump version to 1.13.26~.
