--- a/scripts/t/200_Dpkg_Shlibs/objdump.libc6-2.3
+++ b/scripts/t/200_Dpkg_Shlibs/objdump.libc6-2.3
@@ -104,6 +104,7 @@ DYNAMIC SYMBOL TABLE:
 00115360 l    d  .data.rel.ro	00000000              .data.rel.ro
 00117060 l    d  .data	00000000              .data
 00117f20 l    d  .bss	00000000              .bss
+000036fc g    D  *ABS*	00000000  Base        __bss_start
 00056ef0 g    DF .text	000000db  GLIBC_2.2   getwchar
 0002c1e0  w   DF .text	00000049  GLIBC_2.0   seed48_r
 000e3fc0 g    DF .text	00000068  GLIBC_2.0   xdr_cryptkeyres
