Update Polish translations

--- a/debian/changelog
+++ b/debian/changelog
@@ -44,6 +44,7 @@ dpkg (1.14.6) UNRELEASED; urgency=low
   * Swedish (Peter Karlsson).
   * Nepali (Shiva Prasad Pokharel). Closes: #435353
   * Russian (Yuri Kozlov). Closes: #436147
+  * Polish (Robert Luberda).
 
   [ Updated dselect translations ]
   * Swedish (Peter Karlsson).
@@ -52,6 +53,7 @@ dpkg (1.14.6) UNRELEASED; urgency=low
   [ Updated man pages translations ]
   * German (Helge Kreutzmann).
   * Swedish (Peter Karlsson).
+  * Polish (Robert Luberda).
 
  -- Frank Lichtenheld <djpig@debian.org>  Tue, 03 Jul 2007 01:47:56 +0200
 
