--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2007-08-14  Robert Luberda  <robert@debian.org>
+
+        * pl.po: Updated to 921t.
+
 2007-08-06  Yuri Kozlov  <kozlov.y@gmail.com>
 
 	* ru.po: Updated to 921t.
