--- a/man/ChangeLog
+++ b/man/ChangeLog
@@ -1,3 +1,7 @@
+2008-08-14  Robert Luberda  <robert@debian.org>
+
+        * po/pl.po: Update to 1002t14f269u.
+
 2007-08-05  Peter Karlsson  <peterk@debian.org>
 
 	* po/sv.po: Updated to 1282t.
