--- a/po/pl.po
+++ b/po/pl.po
@@ -4,18 +4,17 @@
 # Bartosz Feñski <fenio@debian.org>, 2004-2005
 # Robert Luberda <robert@debian.org>, 2006 - 2007
 msgid ""
-msgstr ""
-"Project-Id-Version: dpkg 1.14.0\n"
+msgstr "Project-Id-Version: dpkg 1.14.6\n"
 "Report-Msgid-Bugs-To: debian-dpkg@lists.debian.org\n"
 "POT-Creation-Date: 2007-05-24 19:33+0300\n"
-"PO-Revision-Date: 2007-05-04 22:48+0200\n"
+"PO-Revision-Date: 2007-08-13 23:24+0200\n"
 "Last-Translator: Robert Luberda <robert@debian.org>\n"
 "Language-Team: Polish <pddp@debian.linux.org.pl>\n"
-"MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=ISO-8859-2\n"
+"Plural-Forms: nplurals=3; plural=n==1 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 ||"
+" n%100>=20) ? 1 : 2;\n"
+"MIME-Version: 1.0\n"
 "Content-Transfer-Encoding: 8-bit\n"
-"Plural-Forms: nplurals=3; plural=n==1 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 "
-"|| n%100>=20) ? 1 : 2;\n"
 
 #: lib/compat.c:46
 msgid "unable to open tmpfile for vsnprintf"
@@ -4531,9 +4530,9 @@ msgstr ""
 
 #: scripts/dpkg-divert.pl:78 scripts/dpkg-statoverride.pl:62
 #: scripts/update-alternatives.pl:233
-#, fuzzy, perl-format
+#, perl-format
 msgid "two commands specified: %s and --%s"
-msgstr "podano dwa tryby: %s i --%s"
+msgstr "podano dwa polecenia: %s i --%s"
 
 #: scripts/dpkg-divert.pl:111
 #, perl-format
@@ -5166,7 +5165,7 @@ msgstr ""
 
 #: scripts/update-alternatives.pl:131
 msgid "invalid update mode"
-msgstr ""
+msgstr "niepoprawny tryb aktualizacji"
 
 #: scripts/update-alternatives.pl:135
 #, perl-format
@@ -5456,13 +5455,13 @@ msgid "Removing %s (%s), not appropriate with %s."
 msgstr "Usuwanie %s (%s), nie odpowiednie dla %s."
 
 #: scripts/update-alternatives.pl:635
-#, fuzzy, perl-format
+#, perl-format
 msgid ""
 "There is no program which provides %s.\n"
 "Nothing to configure.\n"
 msgstr ""
-"Jest tylko jeden program, który dostarcza %s\n"
-"(%s). Nie ma nic do konfigurowania.\n"
+"Nie znaleziono programu, który dostarcza %s.\n"
+"Nie ma nic do konfigurowania.\n"
 
 #: scripts/update-alternatives.pl:641
 #, perl-format
@@ -5526,8 +5525,3 @@ msgstr "brakuj±cy znak nowej linii po %s"
 msgid "Serious problem: %s"
 msgstr "Powa¿ny problem: %s"
 
-#~ msgid "two modes specified: %s and --%s"
-#~ msgstr "podano dwa tryby: %s i --%s"
-
-#~ msgid "manflag"
-#~ msgstr "manflag"
