--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2007-08-14  Guillem Jover  <guillem@debian.org>
 
+	* dpkg-split/main.c (rerr): Adjust string so that it gets merged by
+	gettext with a similar one.
+
+2007-08-14  Guillem Jover  <guillem@debian.org>
+
 	* src/archives.c (linktosameexistingdir): Mark strings for translation.
 
 2007-08-11  Ian Jackson  <iwj@ubuntu.com>
