Fix perl warning when removing a non diverted file with dpkg-divert

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2007-08-18  Guillem Jover  <guillem@debian.org>
+
+	* scripts/dpkg-divert.pl (infol): Check if parameters are defined
+	before using them. Use defined instead of length to check for undef
+	variables.
+
 2007-08-14  Guillem Jover  <guillem@debian.org>
 
 	* lib/parsehelp.c (parseerr): Switch from ternary operator to compose
