--- a/debian/changelog
+++ b/debian/changelog
@@ -35,6 +35,8 @@ dpkg (1.14.6) UNRELEASED; urgency=low
     to a directory where the existing symlink on-disk points to the
     same place. Closes: #377682
     Thanks to Ian Jackson.
+  * Fix perl warnings:
+    - When removing a non diverted file with dpkg-divert. Closes: #438416
 
   [ Updated scripts translations ]
   * French (Frédéric Bothamy, Christian Perrier).
